Fix wrap on mobile for title

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -85,7 +85,7 @@ a.link {
 @media screen and (max-width: 500px) {
   
   .title {
-    font-size: 2.2rem; 
+    font-size: 2rem; 
     letter-spacing: 0;
   }
   .title2 {
